[gd_scene load_steps=5 format=3 uid="uid://c3m1bst2dy0fq"]

[ext_resource type="Script" uid="uid://bpxd4hvsgxb85" path="res://scripts/npc.gd" id="1_rton3"]
[ext_resource type="PackedScene" uid="uid://dtpqunfnkxai3" path="res://scenes/dialogue/dialogue_manager.tscn" id="2_rton3"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rton3"]
height = 134.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4yhi2"]
size = Vector2(220, 94.0003)

[node name="NPC" type="CharacterBody2D" groups=["NPC"]]
script = ExtResource("1_rton3")
npc_name = "Mocha"

[node name="body" type="CollisionShape2D" parent="."]
position = Vector2(186, 116)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_rton3")
disabled = true
one_way_collision_margin = 0.0

[node name="talking_area" type="Area2D" parent="."]

[node name="collision" type="CollisionShape2D" parent="talking_area"]
position = Vector2(-29, 13)
rotation = 1.5708
shape = SubResource("RectangleShape2D_4yhi2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(161, -55)
scale = Vector2(0.264363, 0.264363)
animation = &""
autoplay = "idle"

[node name="DialogueManager" parent="." instance=ExtResource("2_rton3")]
position = Vector2(186, 65)

[connection signal="body_entered" from="talking_area" to="." method="_on_talking_area_body_entered"]
[connection signal="body_exited" from="talking_area" to="." method="_on_talking_area_body_exited"]
